<resources>
    <string name="app_name">DbDemo</string>
    <string name="add_student">添加学生</string>
    <string name="delete_student">删除学生</string>
    <string name="all_student">所有学生</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="school">学校</string>
    <string name="change_info">修改学生信息</string>
    <string name="name_title">姓名：</string>
    <string name="age_title">年龄：</string>
    <string name="sex_title">性别：</string>
    <string name="school_title">学校：</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
</resources>
